test/types/string/bradc/string2ints/emptyToInt.good
emptyToInt.chpl:2: error: Empty string when converting from string to int(32)
