test/types/string/bradc/string2ints/emptyToInt.chpl
var e = "";
var x = e:int(32);

writeln("x is: ", x);
